--- a/O'Line/css/main.css
+++ b/O'Line/css/main.css
@@ -219,6 +219,7 @@ input:focus-visible, button:focus-visible, .custom-select:focus-visible {
     right: 1px;
     bottom: 1px;
     width: 14px;
+    min-height: 0;
     box-sizing: border-box;
     border: 0;
     border-left: 1px solid rgba(255, 255, 255, 0.08);
